--- a/src/components/NewBookForm/NewBookForm.css
+++ b/src/components/NewBookForm/NewBookForm.css
@@ -1,14 +1,99 @@
 .c-form {
   display: flex;
   flex-flow: column;
+  --small-input-width: 220px;
+  --big-input-width: 320px;
+  --input-inline-padding: 0.6rem;
+}
+
+.c-form__heading {
+  color: rgb(255, 151, 95);
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+.c-form__label {
+  margin-top: 1rem;
+  color: #fff;
+  font-size: 1.2rem;
 }
 
 .c-form__input {
-  border: 1px solid black;
+  margin-top: 0.2rem;
+  width: var(--big-input-width);
+  min-height: 30px;
+  padding-inline: var(--input-inline-padding);
+
+  border-radius: 4px;
+  background: rgb(51, 51, 51);
+  color: rgb(227, 227, 227);
+}
+
+.c-form__input:focus {
+  outline: 2px solid rgb(255, 151, 95);
 }
 
 .c-form__submit {
   width: max-content;
-  padding: 5px;
+  padding: 10px 20px;
   align-self: flex-end;
+
+  font-size: 1.4rem;
+
+  border-radius: 4px;
+  /* background: rgb(224, 224, 224); */
+  background: rgb(255, 180, 140);
+
+  transition: background 0.3s, transform 0.1s;
+}
+
+.c-form__submit:hover {
+  background: rgb(255, 160, 109);
+}
+
+.c-form__submit:active {
+  transform: scale(1.1);
+}
+
+.wrapper--add-book {
+  margin-top: 1.5rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+@media (min-width: 1100px) {
+  .c-form {
+    margin-inline: auto;
+  }
+}
+
+@media (max-width: 700px) {
+  .wrapper--add-book {
+    width: calc(var(--big-input-width) + var(--input-inline-padding) * 2);
+  }
+}
+
+@media (max-width: 500px) {
+  .c-form__input {
+    width: var(--small-input-width);
+  }
+
+  .c-form__heading {
+    font-size: 1.5rem;
+  }
+
+  .c-form__label {
+    font-size: 1rem;
+  }
+
+  .wrapper--add-book {
+    width: calc(
+      var(--small-input-width) + var(--input-inline-padding) * 2
+    );
+  }
+
+  .c-form__submit {
+    padding: 5px 10px;
+    font-size: 1.2rem;
+  }
 }
