--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,13 +3,25 @@
   padding: 30px 20px;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 
   background: rgb(24, 24, 24);
 }
 
+.c-header--interface {
+  justify-content: space-between;
+  min-height: 150px;
+}
+
+.c-header__welcome {
+  align-self: center;
+  text-align: center;
+  color: rgb(255, 141, 100);
+  font-size: 2rem;
+}
+
 @media (min-width: 1100px) {
-  .c-header {
+  .c-header--interface {
     padding-right: 100px;
   }
 }
@@ -17,6 +29,9 @@
 @media (max-width: 700px) {
   .c-header {
     padding: 15px;
+  }
+
+  .c-header--interface {
     flex-flow: column-reverse;
   }
 }
@@ -24,5 +39,13 @@
 @media (max-width: 500px) {
   .c-header {
     padding: 10px;
+  }
+
+  .c-header {
+    min-height: 100px;
+  }
+
+  .c-header__welcome {
+    font-size: 1rem;
   }
 }
