Fix auth button position

--- a/src/components/UserAuth/UserAuth.css
+++ b/src/components/UserAuth/UserAuth.css
@@ -29,6 +29,17 @@
   background: rgb(224, 224, 224);
 }
 
+.wrapper--app .c-user-auth {
+  margin-top: 20px;
+}
+
+.wrapper--app .c-user-auth__button {
+  margin-inline: auto;
+  width: 150px;
+  height: 50px;
+  font-size: 1.3rem;
+}
+
 .c-header .c-user-auth__button {
   background: rgb(255, 180, 140);
   padding-block: 8px;
