Change app theme to dark

--- a/src/components/UserAuth/UserAuth.css
+++ b/src/components/UserAuth/UserAuth.css
@@ -26,7 +26,7 @@
   padding: 10px;
 
   border-radius: 6px;
-  background: rgb(68, 59, 58);
+  background: #ffb48c;
 }
 
 .c-user-auth__button--pulsate {
