--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #181a1b;
 }
 
 button {
